@@ -17,7 +17,7 @@
         
         <!-- Dependency Versions -->
         <disruptor.version>4.0.0</disruptor.version>
-        <protobuf.version>3.25.1</protobuf.version>
+        <protobuf.version>4.28.2</protobuf.version>
         <junit.jupiter.version>5.10.1</junit.jupiter.version>
         <mockito.version>5.10.0</mockito.version>
         
@@ -90,9 +90,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
+                    <release>21</release>
                 </configuration>
             </plugin>
 
@@ -101,9 +99,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
             </plugin>
 
             <!-- Protobuf Compiler Plugin -->
